base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-ap-deployment
  labels:
    deployment: web-ap
spec:
  replicas: 2
  selector:
    matchLabels:
      pod: web-ap
  template:
    spec:
      containers:
      - name: web
        image: 619071321369.dkr.ecr.ap-northeast-1.amazonaws.com/eksargocd-ecr-repository-web:sha-8999ee1be7aa9a6e6996e7bad9a79a532c0b79a5
        ports:
        - containerPort: 8080
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
      - name: ap
        image: 619071321369.dkr.ecr.ap-northeast-1.amazonaws.com/eksargocd-ecr-repository-ap:sha-8999ee1be7aa9a6e6996e7bad9a79a532c0b79a5
        ports:
        - containerPort: 9000
        livenessProbe:
          tcpSocket:
            port: 9000
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
    metadata:
      labels:
        pod: web-ap
