base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-ap-service
spec:
  type: ClusterIP
  selector:
    pod: web-ap
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
